--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ favicon: "logo.png" # name+extension of favicon (which must be put on the root f
 theme_config:
   appearance: "light" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
-  date_format: {{ site.time | date: "%Y %m %d" }} # customize how date is formatted
+  date_format: { site.time | date: date_to_xmlschema } # customize how date is formatted
   show_description: false # show blog description in home page
 
 sass:
