--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: Stupidcipher :( # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
+author: Vibhanshu Mitra # name of site's author
+email: vibhanshumitra@gmail.com # email of site's author
 url: https://vibhmitra.github.io/stupidciphers/ # root address of the site
 baseurl: "/stupidciphers/" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
