--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@ favicon: "logo.png" # name+extension of favicon (which must be put on the root f
 #remote_theme: riggraz/no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
 
 theme_config:
-  appearance: "auto" # can be "light", "dark" or "auto"
+  appearance: "dark" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "" # customize how date is formatted
   date: date_to_xmlschema # added by vibh
